<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">Poemas de Guatemala</string>

    <string name="tPoema1" >
        ¿Dónde te has escondido en este tiempo? de Ana María Rodas
    </string>

    <string name="poema1">
        "
        ¿Dónde te has escondido en este tiempo?
        Bajo tus mismas faldas.
        Enfundada en tu propia fortaleza negaste la evidencia.
        ¿Qué evidencia puede haber si no vas a un entierro?
        ¿Quién ha muerto en esta eterna primavera?
        ¿Quién puede morir en este lugar de cielos y volcanes
        qué se reflejan siempre en los maizales verdes?
        ¿Quién soy yo para sentir, ahora, después de la década perdida
        este infame dolor que me destroza el pecho?
        Soy la superviviente. La que cerró los ojos
        y se llenó las orejas con cera.
        La que pasó junto a las rocas sin escuchar las voces.
        Ciega por propia voluntad para evitar la visión de los buitres
        limpiándose los picos en los huesos."
    </string>

    <string name="tPoema2">
        De acuerdo de Ana María Rodas
    </string>
    <string name="poema2">
        "
        De acuerdo de Ana María Rodas
        De acuerdo,
        soy arrebatada, celosa,
        voluble
        y llena de lujuria.

        ¿Qué esperaban?

        Que tuviera ojos,
        glándulas,
        cerebro, treinta y tres años
        y que actuara
        como el ciprés de un cementerio?

        * * *

        Hoy he descubierto la belleza
        de ser yo misma.
        -no,
        no fue así;
        me lo enseñaste-

        Pero al hacerme mujer
        al mostrarme que los seres
        son tan libres

        Comprendí
        que libre-yo
        y libre-tú
        podamos tomarnos de la mano
        y realizar la unión sin anularnos.


    </string>
    <string name="tpoema3">
        Lunas que caían a pedazos de Ana María Rodas
    </string>
    <string name="poema3">
        "
        Lunas que caían a pedazos
        descolgadas del cielo
        lunas nuevas no vistas nunca
        Lunas llenas a ratos
        me inundaron la garganta de llanto

        Lunas Siempre fueron lunas

        A dónde ha ido todo?
        Qué viento de cuarenta años borró tu
        carne de mi carne?

        Ariosto envió a Orlando
        el Furioso
        a buscar su sanidad mental
        a ese lugar lechoso donde uno encuentra todo
        lo que se pierde en la tierra

        A dónde iré a buscar yo
        el calor de las noches
        la lluvia tibia
        las cenas de sopa de fideos?
        Nos comimos
        la luna a pedazos Casi duró cuatro años"
    </string>
    <string name="tiPoema1">EL SAPO VERDE</string>
    <string name="ipoema1">"
        Ese sapo verde
        se esconde y se pierde;
        así no lo besa
        ninguna princesa.

        Porque con un beso
        él se hará princeso
        o príncipe guapo;
        ¡y quiere ser sapo!

        No quiere reinado,
        ni trono dorado,
        ni enorme castillo,
        ni manto amarillo.

        Tampoco lacayos
        ni tres mil vasallos.
        Quiere ver la luna
        desde la laguna.

        Una madrugada
        lo encantó alguna hada;
        y así se ha quedado:
        sapo y encantado.

        Disfruta de todo:
        se mete en el lodo
        saltándose, solo,
        todo el protocolo.

        Y le importa un pito
        si no está bonito
        cazar un insecto;
        ¡que nadie es perfecto!
        "</string>

    <string name="tiPoema2">
        EN MEDIO DEL PUERTO
    </string>
    <string name="ipoema2">
        "
        En medio del puerto,
        con velas y flores,
        navega un velero
        de muchos colores.

        Diviso a una niña
        sentada en la popa:
        su cara es de lino,
        de fresa, su boca.

        Por más que la miro,
        y sigo mirando,
        no sé si sus ojos
        son verdes o pardos.

        En medio del puerto,
        con velas y flores,
        se aleja un velero
        de muchos colores."
    </string>
    <string name="tiPoema3">
        El carrusel
    </string>

    <string name="ipoema3">
        "
        Llegaron los carritos chocones
        y se abre para mí,
        un mundo de ilusiones!.
        Vamos ya,
        que me quiero mecer
        en los caballitos
        del gran carrusel!,
        que quiero volar
        en los avioncitos
        que van a empezar!.
        Y luego…
        cotufa, algodón, coquito,
        con mucha alegría
        me dará papito!."
    </string>
    <string name="tpPoema">
        ¡¡¡ OH, GUATEMALA !!!
    </string>
    <string name="ppoema">
        "A Guatemala yo la venero
        porque ésta es mi tierra natal,
        y para esta tierra que quiero
        yo pido al cielo vida inmortal.


        A su bandera veo altanera
        que ondula excelsa su azul turquí
        y por las lomas y las praderas
        el árbol verde veo de aquí.

        Y sus montañas que me parecen
        un mar inmenso de oscuro azul,
        donde las olas bellas se mecen
        con sus espumas suaves de tul.

        Y sus volcanes altos y erguidos
        cual centinelas cuidan mi hogar
        y son sus suelos, los más queridos;
        mi Guatemala, mi dulce hogar.

        Oh, Guatemala, patria querida,
        tierra adorada donde nací,
        hoy mi alma entera de amor henchida
        quiere cantar solo para ti.

        El dulce canto alegre y sagrado
        como promesa de amor filial,
        cual lirio blanco veo con agrado
        y para ti pido:  ¡Vida inmortal!"
    </string>
    <string name="tpPoema1">
        TECUN UMAN
    </string>
    <string name="ppoema1">
        "Hombre valiente que un día
        luchaste contra extranjeros,
        quienes infames, muerte te dieron
        y tus tierras sin tregua invadieron.

        Moriste, ¡oh, Tecún Umán,
        sobre tu cuerpo yacente,
        con sudor sobre tu frente,
        cayó sobre tu pecho ardiente
        nuestro sagrado Quetzal,
        simbolizando con esto
        que muerto Tecún Umán
        ¡moría la libertad!"
    </string>
    <string name="tpPoema2">
        MONJA BLANCA
    </string>
    <string name="ppoema2">
        "Oh, flor de flores, de belleza innata, que ostentas blancura inmaculada, permite que en tus pétalos de plata se inspire hoy mi alma ilusionada.

        Igual como tu nido de esmeralda te arrulla con sus hojas, con dulzura arrullarán mis brazos la guirnalda que formaré exaltando tu hermosura.

        Hermosa reina de mi bella tierra, dignate recibir este homenaje que mi más grande patriotrismo encierra.

        Y recostada en el suavísimo paisaje quiero verte cuando la tarde cierra la mansión de la luz con un celaje."
    </string>
    <string name="tpPoema3">
        CEIBA PENTANDRA
    </string>
    <string name="ppoema3">
        "El árbol nacional de Guatemala escogido entre bellos ejemplares luce como un soldado fervoroso que guarda día y noche nuestro suelo.

        Ceiba Pentandra, tu solemne porte, simboliza lealtad y poderío. Tu fronda amplia habla de cobertura, de refugio en tu sombra y gallardía.

        Símbolo patrio, me inspiraste siempre y en mi alma de niña (o) te he llevado junto al Quetzal, Bandera,  Monja Blanca,cual tesoros de estirpe real, guardados."
    </string>


</resources>