<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActPatria">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Poemas Patrios"
        android:layout_marginTop="25sp"
        android:layout_gravity="center"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="15sp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tpPoema"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:justificationMode="inter_word"
                android:layout_marginBottom="25sp"
                android:text="@string/ppoema"
                android:textIsSelectable="true"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150sp"
                android:src="@drawable/ic_quetzal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tpPoema1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:justificationMode="inter_word"
                android:layout_marginBottom="25sp"
                android:text="@string/ppoema1"
                android:textIsSelectable="true"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150sp"
                android:src="@drawable/ic_tecun"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tpPoema2"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:justificationMode="inter_word"
                android:layout_marginBottom="25sp"
                android:text="@string/ppoema2"
                android:textIsSelectable="true"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150sp"
                android:src="@drawable/ic_monja"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tpPoema3"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:justificationMode="inter_word"
                android:layout_marginBottom="25sp"
                android:text="@string/ppoema3"
                android:textIsSelectable="true"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150sp"
                android:src="@drawable/ic_ceiba"
                />

            <Button
                android:id="@+id/btnPatRet"
                android:backgroundTint="@color/teal_700"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:text="Regresar"
                android:onClick="mPatRet"
                />

        </LinearLayout>



    </ScrollView>

</LinearLayout>